# lean4agent

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  BRANCH_COMPARISON.md  BUGFIX_CHANGES.md  BUGFIX_SUMMARY.md  COMPARISON_WITH_LLMLEAN.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LSP_GUIDE.md  PERFORMANCE_GUIDE.md  PROOF_SCREENSHOTS.md  PR_DELIVERABLES.md  README.md  REFACTORING_REPORT.md  TESTING_GUIDE.md  benchmark_performance.py  demo_output.txt  demo_proof_generation.py  examples.py  proof_demo.html  pyproject.toml  requirements.txt  run_with_utf8.py  screenshot_terminal_output.txt  setup.py  test_encoding_demo.py  test_incremental.py  test_multi_step_proof.py  test_unicode_fix.py  verify_installation.py
examples/: .env.example  basic_usage.py  lsp_example.py  openai_compatible_apis.py  openai_example.py  performance_features.py
lean4agent/: __init__.py  agent.py  config.py
lean4agent/lean/: __init__.py  client.py  lsp_client.py  repl.py
lean4agent/llm/: __init__.py  base.py  ollama.py  openai_interface.py
tests/: test_agent.py  test_config.py  test_llm.py
